--- a/samples/hello-world2.yaml
+++ b/samples/hello-world2.yaml
@@ -1,14 +1,12 @@
-asyncapi: '2.5.0'
+asyncapi: 2.6.0
 info:
   title: Hello world application
-  version: '0.1.0'
+  version: 0.1.0
 servers:
   production:
     url: broker.mycompany.com
     protocol: amqp
     description: This is "My Company" broker.
-    security:
-      - user-password: []
 channels:
   hello:
     publish:
@@ -39,6 +37,3 @@ components:
       type: string
       description: The date and time a message was sent.
       format: datetime
-  securitySchemes:
-    user-password:
-      type: userPassword
