--- a/samples/account-service-cloudevents/account-service-ce-structured.yaml
+++ b/samples/account-service-cloudevents/account-service-ce-structured.yaml
@@ -8,7 +8,7 @@ info:
 
 channels:
   user/signedup:
-    subscribe:
+    publish:
       message:
         $ref: '#/components/messages/userSignedUp'
 
