Update hello-asyncapi for Async API v3.0 #7

--- a/samples/hello-asyncapi/hello-world1-2.6.yaml
+++ b/samples/hello-asyncapi/hello-world1-2.6.yaml
@@ -1,4 +1,4 @@
-# The simplest AsyncAPI definition possible
+# The simplest AsyncAPI definition possible in 2.6.0
 asyncapi: 2.6.0
 info:
   title: Hello world application
