Update account-email-services for Async API v3.0 #8

--- a/samples/account-email-services/email-service-2.6/config/common.yml
+++ b/samples/account-email-services/email-service-2.6/config/common.yml
@@ -1,16 +1,19 @@
 default:
   app:
-    name: Account Service
+    name: Email Service
     version: 1.0.0
 
   broker:
+
+
     mqtt:
       url: mqtt://test.mosquitto.org
-      topics: []
+      topics: ["user/signedup"]
       qos:
       protocol: mqtt
       retain:
       subscribe: true
+
 
 development:
 
@@ -19,3 +22,4 @@ test:
 staging:
 
 production:
+
