--- a/samples/account-service-cloudevents/account-service-ce-structured-3.0.yaml
+++ b/samples/account-service-cloudevents/account-service-ce-structured-3.0.yaml
@@ -1,17 +1,23 @@
 # Account Service in CloudEvents structured format based on this blog post:
 # https://developers.redhat.com/articles/2021/06/02/simulating-cloudevents-asyncapi-and-microcks#
-asyncapi: '2.6.0'
+asyncapi: 3.0.0
 info:
   title: Account Service CloudEvents - structured
   version: 1.0.0
   description: Processes user sign ups and publishes an event afterwards
-
 channels:
   user/signedup:
-    publish:
-      message:
+    address: user/signedup
+    messages:
+      publish.message:
         $ref: '#/components/messages/userSignedUp'
-
+operations:
+  user/signedup.publish:
+    action: receive
+    channel:
+      $ref: '#/channels/user~1signedup'
+    messages:
+      - $ref: '#/channels/user~1signedup/messages/publish.message'
 components:
   messages:
     userSignedUp:
@@ -22,10 +28,9 @@ components:
         content-type:
           type: string
           enum:
-            - 'application/cloudevents+json; charset=UTF-8'
+            - application/cloudevents+json; charset=UTF-8
       payload:
         $ref: '#/components/schemas/userSignedUpPayload'
-
   schemas:
     userSignedUpPayload:
       type: object
@@ -44,3 +49,4 @@ components:
           type: string
           format: email
           description: Email of the user
+
